--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,12 @@
         "php": ">=5.4.0",
         "illuminate/support": "~5.0.0",
         "illuminate/filesystem": "~5.0.0",
-        "guzzlehttp/guzzle": "^6.1"
+        "guzzlehttp/guzzle": "^5.3"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=4.8",
-        "symfony/var-dumper": ">=2.8",
+        "phpunit/phpunit": "^4.8",
+        "symfony/yaml": "^2.8",
+        "symfony/var-dumper": "^2.8",
         "mockery/mockery": "^0.9.4"
     },
     "autoload": {
