--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,14 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "guzzlehttp/guzzle": "^6.1",
-        "symfony/console": "^3.0"
+        "guzzlehttp/guzzle": "^6.1|^5.3",
+        "symfony/console": "^3.0|^2.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
-        "symfony/yaml": "^3.0",
-        "symfony/var-dumper": "^3.0",
-        "symfony/process": "^3.0",
+        "symfony/yaml": "^3.0|^2.8",
+        "symfony/var-dumper": "^3.0|^2.8",
+        "symfony/process": "^3.0|^2.8",
         "mockery/mockery": "^0.9.4"
     },
     "autoload": {
