--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,13 @@ php:
   - 5.5
   - 5.6
   - 7.0
+  - 7.1
+  - 7.2
+  - 7.3
+  - 7.4
   - hhvm
+
+dist: trusty
 
 before_script:
   - composer self-update
