--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,38 @@
 {
-    "name": "faizshukri/phpquran",
-    "description": "Complete PHP Quran Resource",
-    "license": "MIT",
-    "keywords": ["quran", "al-quran", "muslim", "islam", "kitab"],
-    "authors": [
-        {
-            "name": "Faiz Shukri",
-            "email": "faizshukri90@gmail.com"
-        }
-    ],
-    "require": {
-        "php": ">=5.5.0",
-        "guzzlehttp/guzzle": "^6.1|^5.3",
-        "symfony/console": "^3.0|^2.8"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^4.8",
-        "symfony/yaml": "^3.0|^2.8",
-        "symfony/var-dumper": "^3.0|^2.8",
-        "symfony/process": "^3.0|^2.8",
-        "mockery/mockery": "^0.9.4"
-    },
-    "autoload": {
-        "psr-4": {
-            "FaizShukri\\Quran\\": "src"
-        }
-    },
-    "bin": ["bin/quran"]
+  "name": "faizshukri/phpquran",
+  "description": "Complete PHP Quran Resource",
+  "license": "MIT",
+  "keywords": [
+    "quran",
+    "al-quran",
+    "muslim",
+    "islam",
+    "kitab",
+    "phpquran"
+  ],
+  "authors": [
+    {
+      "name": "Faiz Shukri",
+      "email": "faizshukri90@gmail.com"
+    }
+  ],
+  "require": {
+    "php": ">=5.5.0",
+    "guzzlehttp/guzzle": "^6.1|^5.3",
+    "symfony/console": "^3.0|^2.8"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.4",
+    "symfony/yaml": "^3.0|^2.8",
+    "symfony/var-dumper": "^3.0|^2.8",
+    "symfony/process": "^3.0|^2.8"
+  },
+  "autoload": {
+    "psr-4": {
+      "FaizShukri\\Quran\\": "src"
+    }
+  },
+  "bin": [
+    "bin/quran"
+  ]
 }
