--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,13 @@
   "require": {
     "php": ">=5.5.0",
     "guzzlehttp/guzzle": "^6.1|^5.3",
-    "symfony/console": "^5.0|4.0|^3.0|^2.8"
+    "symfony/console": "^5.0|4.0|^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.4",
-    "symfony/yaml": "^5.0|4.0|^3.0|^2.8",
-    "symfony/var-dumper": "^5.0|4.0|^3.0|^2.8",
-    "symfony/process": "^5.0|4.0|^3.0|^2.8"
+    "symfony/yaml": "^5.0|4.0|^3.0",
+    "symfony/var-dumper": "^5.0|4.0|^3.0",
+    "symfony/process": "^5.0|4.0|^3.0"
   },
   "autoload": {
     "psr-4": {
