--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,8 @@
     "symfony/console": "^5.0|4.0|^3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.4",
-    "symfony/yaml": "^5.0|4.0|^3.0",
-    "symfony/var-dumper": "^5.0|4.0|^3.0",
-    "symfony/process": "^5.0|4.0|^3.0"
+    "phpunit/phpunit": "^5.7",
+    "symfony/var-dumper": "^5.0|4.0|^3.0"
   },
   "autoload": {
     "psr-4": {
