--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,22 @@
     }
   ],
   "require": {
-    "php": ">=5.5.0",
+    "php": ">=5.6.0",
     "guzzlehttp/guzzle": "^6.1|^5.3",
     "symfony/console": "^5.0|4.0|^3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7",
+    "phpunit/phpunit": ">=5.7",
     "symfony/var-dumper": "^5.0|4.0|^3.0"
   },
   "autoload": {
     "psr-4": {
       "FaizShukri\\Quran\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Test\\": "tests"
     }
   },
   "bin": [
