--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "symfony/console": "^5.0|4.0|^3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": ">=5.7",
+    "phpunit/phpunit": "^5.7",
     "symfony/var-dumper": "^5.0|4.0|^3.0"
   },
   "autoload": {
