Update whitelist and scrutinzer update
Signed-off-by: Faiz Shukri <faizshukri90@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ before_script:
   - composer install --prefer-source --no-interaction --dev
 
 script:
-  - ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+  - ./vendor/bin/phpunit --whitelist ./src --coverage-text --coverage-clover=coverage.clover
 
 after_script:
-  - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+  - if [[ ${TRAVIS_PHP_VERSION:0:1} == "7" ]]; then wget https://scrutinizer-ci.com/ocular.phar; fi
+  - if [[ ${TRAVIS_PHP_VERSION:0:1} == "7" ]]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
