--- a/composer.json
+++ b/composer.json
@@ -37,5 +37,15 @@
   },
   "bin": [
     "bin/quran"
-  ]
+  ],
+  "extra": {
+    "laravel": {
+      "providers": [
+        "FaizShukri\\Quran\\QuranServiceProvider"
+      ],
+      "aliases": {
+        "Quran": "FaizShukri\\Quran\\Facades\\Quran"
+      }
+    }
+  }
 }
