--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "faizshukri/phpquran",
   "description": "Complete PHP Quran Resource",
-  "version": "1.0.0-beta",
+  "version": "1.0.0-beta.2",
   "license": "MIT",
   "keywords": [
     "quran",
