--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,10 @@
   ],
   "require": {
     "php": ">=5.6.0",
-    "guzzlehttp/guzzle": "^7.0|^6.1|^5.3",
     "symfony/console": "^5.0|^4.0|^3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7",
-    "symfony/var-dumper": "^5.0|^4.0|^3.0"
+    "phpunit/phpunit": "^6.5|^5.7"
   },
   "autoload": {
     "psr-4": {
