--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
   - composer install --prefer-source --no-interaction --dev
 
 script:
-  - ./vendor/bin/phpunit --whitelist ./src --coverage-text --coverage-clover=coverage.clover
+  - XDEBUG_MODE=coverage ./vendor/bin/phpunit --whitelist ./src --coverage-text --coverage-clover=coverage.clover
 
 after_script:
   - if [[ ${TRAVIS_PHP_VERSION:0:1} == "7" ]]; then wget https://scrutinizer-ci.com/ocular.phar; fi
