--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
   "name": "faizshukri/phpquran",
   "description": "Complete PHP Quran Resource",
-  "version": "1.0.1",
   "license": "MIT",
   "keywords": [
     "quran",
@@ -19,10 +18,10 @@
   ],
   "require": {
     "php": ">=5.6.0",
-    "symfony/console": "^5.0|^4.0|^3.0"
+    "symfony/console": "^6.0|^5.0|^4.0|^3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.5|^5.7"
+    "phpunit/phpunit": "^8.5|^6.5|^5.7"
   },
   "autoload": {
     "psr-4": {
