Update action and test

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Run test
         run: |
-          if (( ${PHP_VERSION:0:1} < 8 )); then
+          if [[ ${PHP_VERSION:0:1} == "7" ]]; then
             ./vendor/bin/phpunit --whitelist ./src --coverage-text --coverage-clover=coverage.clover
           else
             ./vendor/bin/phpunit --whitelist ./src
