--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         operating-system: ["self-hosted"]
-        php-versions: ["5.6", "7.0", "7.4", "8.0", "8.3"]
+        php-versions: ["7.0", "7.4", "8.0", "8.3"]
     env:
       COMPOSER_ALLOW_SUPERUSER: "1"
     steps:
