--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   ],
   "require": {
     "php": ">=5.6.0",
-    "symfony/console": "^6.0|^5.0|^4.0|^3.0"
+    "symfony/console": "^7.0|^6.0|^5.0|^4.0|^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5|^6.5|^5.7"
